# Sakatsume_private_Sidon

./: .gitignore  README.md  pyproject.toml
scripts/: cleanse_webdataset.py  sbatch_cleanse.sh
scripts/examples/: cleanse_.py  cleanse_mls.py  cleanse_mls_ray_upload.py  cleanse_multilingual_librispeech.py
scripts/pbs/: cleanse.sh  cleanse_mls_ray_upload.sh  train_vocoder.sh
scripts/pbs/cleanse/common_voice/: commonvoice.sh  submit_all.sh
scripts/pbs/cleanse/mls/: cleanse_language.sh  english_dev.sh  english_test.sh  english_train.sh  submit.sh
src/sidon/cleansing/: __init__.py  audio.py
